fix portfolio view cards on mobile version

--- a/src/sections/portfolio/portfolio.css
+++ b/src/sections/portfolio/portfolio.css
@@ -17,8 +17,8 @@
 /* ============ MEDIA QUERIES (SMALL DEVICES) ====================== */
 
 @media screen and (max-width: 600px) {
-  /* .portfolio__container {
+  .portfolio__container {
     grid-template-columns: 1fr;
     gap: 1rem;
-  } */
+  }
 }
